--- a/src/blog.html
+++ b/src/blog.html
@@ -1,63 +1,392 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Blog</title>
+
     <link rel="stylesheet" href="assets/styles/blog.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/styles/aside.css">
+    <link rel="stylesheet" href="assets/styles/footer.css">
+    <link rel="stylesheet" href="assets/styles/header.css">
+    <link rel="stylesheet" href="assets/styles/main.css">
+    <link rel="stylesheet" href="assets/styles/media.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 
-<div class="header">
-    <h2>Blog Name</h2>
-    <i class="fa fa-cloud"></i>
-    <i class="fa fa-heart"></i>
-    <i class="fa fa-car"></i>
-    <i class="fa fa-file"></i>
-    <i class="fa fa-bars"></i>
-</div>
+<div class="wrapper">
+    <header class="header">
 
-<div class="row">
-    <div class="leftcolumn">
-        <div class="card">
-            <h2>TITLE HdsEADssING</h2>
-            <h5>Title description, Dec 7, 2017</h5>
-            <div class="fakeimg" style="height:200px;">Image</div>
-            <p>Some text..</p>
-            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                exercitation ullamco.</p>
-        </div>
-        <div class="card">
-            <h2>TITLE HEADINGssss</h2>
-            <h5>Title description, Sep 2, 2017</h5>
-            <div class="fakeimg" style="height:200px;">Image</div>
-            <p>Some text..</p>
-            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                exercitation ullamco.</p>
-        </div>
-    </div>
-    <div class="rightcolumn">
-        <div class="card">
-            <h2>About Me</h2>
-            <div class="fakeimg" style="height:100px;">Image</div>
-            <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-        </div>
-        <div class="card">
-            <h3>Popular Post</h3>
-            <div class="fakeimg">Image</div><br>
-            <div class="fakeimg">Image</div><br>
-            <div class="fakeimg">Image</div>
-        </div>
-        <div class="card">
-            <h3>Follow Me</h3>
-            <p>Some text..</p>
-        </div>
-    </div>
-</div>
+        <div class="header-container">
+            <!--Hamburger-->
+            <a href="#main-menu"
+               role="button"
+               id="main-menu-toggle"
+               class="menu-toggle"
+               aria-expanded="false"
+               aria-controls="main-menu"
+               aria-label="Open main menu">
 
-<div class="footer">
-    <h2>Footer</h2>
+                <span class="sr-only">Open main menu</span>
+                <span class="fa fa-bars" aria-hidden="true"></span>
+            </a>
+
+            <div class="logo">
+                <a href="#">Logotype</a>
+            </div>
+
+            <!-- Icons -->
+            <div class="icons">
+                <div class="search-wrapper">
+                    <a href="#">
+                        <i class="fa fa-search" aria-hidden="true"></i>
+                    </a>
+                    <div class="search">
+                        <input type="search" placeholder="Search...">
+                    </div>
+                </div>
+
+                <div class="social-icons">
+                    <a href="#">
+                        <i class="fa fa-instagram" aria-hidden="true"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fa fa-facebook" aria-hidden="true"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fa fa-linkedin" aria-hidden="true"></i>
+                    </a>
+                    <a href="https://github.com/pablos1">
+                        <i class="fa fa-github" aria-hidden="true"></i>
+                    </a>
+                </div>
+
+            </div>
+
+            <!--Navigation -->
+            <nav id="main-menu"
+                 class="menu nav main-menu"
+                 role="navigation"
+                 aria-expanded="false"
+                 aria-label="Main menu">
+
+                <!--Hamburger-->
+                <a href="#main-menu-toggle"
+                   class="menu-close"
+                   role="button"
+                   id="main-menu-close"
+                   aria-expanded="false"
+                   aria-controls="main-menu"
+                   aria-label="Close main menu">
+                    <span class="sr-only">Close main menu</span>
+                    <span class="fa fa-times" aria-hidden="true"></span>
+                </a>
+
+                <!-- Links -->
+                <ul>
+                    <li>
+                        <a class="active" href="#home">Home</a></li>
+                    <li>
+                        <a href="#contact">Contact</a>
+                    </li>
+                    <li>
+                        <a href="#about">About</a>
+                    </li>
+                    <li>
+                        <a href="#about">Photos</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <main class="main">
+        <div class="articles-container">
+            <article class="article">
+                <img class="article-photo" src="assets/images/articles/1.jpg">
+                <h2 class="article-title">BASS DROP</h2>
+                <p class="article-content">Now that I’m done thoroughly mangling that vague metaphor, let’s get down to
+                    business. You know you need to start blogging to grow your business, but you don’t know how.
+                    In this post, I’ll show you how to write a blog post in five simple steps that people will actually
+                    want to read. Ready? Let’s get started.</p>
+                <div class="article-bottom">
+                    <div class="article-icons">
+                        <i class="fa fa-comments" aria-hidden="true"></i>
+                        <p>10</p>
+                        <i class="fa fa-star"></i>
+                        <p>15</p>
+                    </div>
+
+                    <div class="article-date">April 2, 2017</div>
+                </div>
+            </article>
+            <article class="article">
+                <img class="article-photo" src="assets/images/articles/2.jpg">
+                    <h2 class="article-title">French</h2>
+                    <p class="article-content">Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur
+                        adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+                        minim veniam, quis nostrud exercitation ullamco.</p>
+                    <div class="article-bottom">
+                        <div class="article-icons">
+                            <i class="fa fa-comments" aria-hidden="true"></i>
+                            <p>0</p>
+                            <i class="fa fa-star"></i>
+                            <p>1</p>
+                        </div>
+
+                        <div class="article-date">June 3, 2018</div>
+                    </div>
+            </article>
+            <article class="article">
+                <img class="article-photo" src="assets/images/articles/3.jpg">
+                <h2 class="article-title">Choose a Topic</h2>
+                <p class="article-content">There’s an old maxim that states, “No fun for the writer, no fun for the
+                    reader.” No matter what industry you’re working in, as a blogger, you should live and die by this
+                    statement...
+                </p>
+                <div class="article-bottom">
+                    <div class="article-icons">
+                        <i class="fa fa-comments" aria-hidden="true"></i>
+                        <p>17</p>
+                        <i class="fa fa-star"></i>
+                        <p>10</p>
+                    </div>
+
+                    <div class="article-date">September 16, 2017</div>
+                </div>
+            </article>
+            <article class="article">
+                <img class="article-photo" src="assets/images/articles/4.jpg">
+                <h2 class="article-title">Monster Cat</h2>
+                <p class="article-content">Before you do any of the following steps, be sure to pick a topic that
+                    actually interests you. Nothing – and I mean NOTHING – will kill a blog post more effectively than
+                    a lack of enthusiasm from the writer. You can tell when a writer is bored by their subject, and it’s
+                    so cringe-worthy it’s a little embarrassing.
+                </p>
+                <div class="article-bottom">
+                    <div class="article-icons">
+                        <i class="fa fa-comments" aria-hidden="true"></i>
+                        <p>99</p>
+                        <i class="fa fa-star"></i>
+                        <p>5.8</p>
+                    </div>
+
+                    <div class="article-date">October 12, 2017</div>
+                </div>
+            </article>
+
+            <article class="article">
+                <img class="article-photo" src="assets/images/articles/5.jpg">
+                <h2 class="article-title">Marter</h2>
+                <p class="article-content"> can hear your objections already. “But Dan, I have to blog for a cardboard
+                    box manufacturing company.” I feel your pain, I really do. During the course of my career, I’ve
+                    content for dozens of clients in some less-than-thrilling industries (such as financial regulatory
+                </p>
+                <div class="article-bottom">
+                    <div class="article-icons">
+                        <i class="fa fa-comments" aria-hidden="true"></i>
+                        <p>132</p>
+                        <i class="fa fa-star"></i>
+                        <p>9</p>
+                    </div>
+
+                    <div class="article-date">November 9, 2017</div>
+                </div>
+            </article>
+
+            <article class="article">
+                <img class="article-photo" src="assets/images/articles/6.jpg">
+                <h2 class="article-title">Berckley</h2>
+                <p class="article-content">ou also need to be able to accept that not every post is going to get your
+                    motor running. Some posts will feel like a chore, but if you have editorial control over what you
+                    write
+                    about, then choose topics you’d want to read – even if they relate to niche industries.
+                </p>
+                <div class="article-bottom">
+                    <div class="article-icons">
+                        <i class="fa fa-comments" aria-hidden="true"></i>
+                        <p>3</p>
+                        <i class="fa fa-star"></i>
+                        <p>4</p>
+                    </div>
+
+                    <div class="article-date">December 7, 2017</div>
+                </div>
+            </article>
+
+            <article class="article">
+                <img class="article-photo" src="assets/images/articles/7.jpg">
+                <h2 class="article-title">From the flood</h2>
+                <p class="article-content">Great blog posts don’t just happen. Even the best bloggers need a rough idea
+                    to keep them on-track. This is where outlines come in. An outline doesn’t need to be lengthy, or
+                    even detailed – it’s just a rough guide to make sure you don’t ramble on and on about something
+                    tangential to your topic.
+                </p>
+                <div class="article-bottom">
+                    <div class="article-icons">
+                        <i class="fa fa-comments" aria-hidden="true"></i>
+                        <p>11</p>
+                        <i class="fa fa-star"></i>
+                        <p>7</p>
+                    </div>
+
+                    <div class="article-date">April 12, 2017</div>
+                </div>
+            </article>
+
+            <article class="article">
+                <img class="article-photo" src="assets/images/articles/8.jpg">
+                <h2 class="article-title">Survivor</h2>
+                <p class="article-content">Outlines keep you honest. They stop you from indulging in poorly thought-out
+                    metaphors about driving and keep you focused on the overall structure of your post. Sometimes I’ll
+                    write a more thorough outline (and sometimes I won’t bother </p>
+                <div class="article-bottom">
+                    <div class="article-icons">
+                        <i class="fa fa-comments" aria-hidden="true"></i>
+                        <p>18</p>
+                        <i class="fa fa-star"></i>
+                        <p>1.5</p>
+                    </div>
+
+                    <div class="article-date">July 28, 2017</div>
+                </div>
+            </article>
+
+            <article class="article">
+                <img class="article-photo" src="assets/images/articles/9.jpg">
+                <h2 class="article-title">Zoom</h2>
+                <p class="article-content">Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur
+                    adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+                    veniam, quis nostrud exercitation ullamco.</p>
+                <div class="article-bottom">
+                    <div class="article-icons">
+                        <i class="fa fa-comments" aria-hidden="true"></i>
+                        <p>56</p>
+                        <i class="fa fa-star"></i>
+                        <p>3.4</p>
+                    </div>
+
+                    <div class="article-date">May 27, 2017</div>
+                </div>
+            </article>
+
+        </div>
+    </main>
+
+    <aside class="aside">
+        <div class="block profile">
+            <img src="assets/images/PabloPhoto.jpg" alt="Author Photo">
+            <h1>Pablo Schklowsky</h1>
+            <p class="summary">Dynamic technology leader with over 15 years' experience building and scaling teams of
+                highly motivated software engineers. Able to fluidly interface with a broad set of stakeholders, from
+                external customers to C-level executives to the most technical of engineers. Proven capability to hire
+                effectively, with a keen eye for talent and collaboration.</p>
+        </div>
+
+        <div class="block icons-block">
+            <a href="#">
+                <i class="fa fa-instagram" aria-hidden="true"></i>
+            </a>
+            <a href="#">
+                <i class="fa fa-facebook" aria-hidden="true"></i>
+            </a>
+            <a href="#">
+                <i class="fa fa-linkedin" aria-hidden="true"></i>
+            </a>
+            <a href="https://github.com/pablos1">
+                <i class="fa fa-github" aria-hidden="true"></i>
+            </a>
+        </div>
+
+        <div class="block subscribe-block">
+            <form class="subscribe">
+                <h3 class="block-header">Subscribe</h3>
+                <input type="text" placeholder="Name...">
+                <input type="email" placeholder="Email...">
+                <button type="button">Subscribe</button>
+            </form>
+        </div>
+
+        <div class="block search-block">
+            <h3 class="block-header">Search</h3>
+            <form>
+                <input type="search" placeholder="Search...">
+                <button type="submit"><i class="fa fa-search"></i></button>
+            </form>
+        </div>
+
+        <div class="block tags-block">
+            <h3 class="block-header">Hash Tags</h3>
+            <div class="tags">
+                <span><a href='#'>#love.</a></span>
+                <span><a href='#'>#instagood</a></span>
+                <span><a href='#'>#photooftheday</a></span>
+                <span><a href='#'>#fashion</a></span>
+                <span><a href='#'>#beautiful</a></span>
+                <span><a href='#'>#happy</a></span>
+                <span><a href='#'>#cute</a></span>
+                <span><a href='#'>#tbt</a></span>
+                <span><a href='#'>#photooftheday</a></span>
+                <span><a href='#'>#fashion</a></span>
+                <span><a href='#'>#beautiful</a></span>
+                <span><a href='#'>#happy</a></span>
+            </div>
+        </div>
+
+        <div class="block comments-block">
+            <h3 class="comments-header">Recent comments</h3>
+            <!--<div class="comment-item">-->
+
+            <!--</div>-->
+            <img class="avatar" src="assets/images/commentators/trump.jpg">
+            <div class="comment">
+                <h5>Donald Trump</h5>
+                <p>Sometimes by losing a battle you find a new way to win the war</p>
+            </div>
+            <img class="avatar" src="assets/images/commentators/alex.jpg">
+            <div class="comment">
+                <h5>Alexandra</h5>
+                <p>Comment tags are used to insert comments in the HTML source code</p>
+            </div>
+            <img class="avatar" src="assets/images/commentators/rock.jpg">
+            <div class="comment">
+                <h5>The Rock!</h5>
+                <p>JavaScript comments can be used to explain JavaScript code</p>
+            </div>
+            <img class="avatar" src="assets/images/commentators/clinton.jpg">
+            <div class="comment">
+                <h5>Clinton Bill</h5>
+                <p>You should not pass!</p>
+            </div>
+        </div>
+
+    </aside>
+
+    <footer class="footer">
+        <div class="contacts-wrapper">
+            <div class="address">
+                <i class="fa fa-address-card" aria-hidden="true"></i>
+                123 6th St.Melbourne, FL 32904
+            </div>
+            <div class="copyrights">
+                Copyright ©. All Rights Reserved 2018
+            </div>
+        </div>
+        <div class="contacts-inline">
+            <div><i class="fa fa-phone" aria-hidden="true"></i>T:
+                <a href="sms:+1-541-754-3010">+1-541-754-3010</a>
+            </div>
+            <div>
+                <i class="fa fa-envelope" aria-hidden="true"></i>E:
+                <a href="mailto:name@example.com">name@example.com</a>
+            </div>
+            <div>
+                <i class="fa fa-github" aria-hidden="true"></i>
+                <a href="https://github.com/pablos1">www.github.com/pablos1</a>
+            </div>
+        </div>
+    </footer>
 </div>
 
 </body>
