fidex Index.html location

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog</title>
 
-    <link rel="stylesheet" href="assets/styles/blog.css">
-    <link rel="stylesheet" href="assets/styles/aside.css">
-    <link rel="stylesheet" href="assets/styles/footer.css">
-    <link rel="stylesheet" href="assets/styles/header.css">
-    <link rel="stylesheet" href="assets/styles/main.css">
-    <link rel="stylesheet" href="assets/styles/media.css">
+    <link rel="stylesheet" href="src/assets/styles/blog.css">
+    <link rel="stylesheet" href="src/assets/styles/aside.css">
+    <link rel="stylesheet" href="src/assets/styles/footer.css">
+    <link rel="stylesheet" href="src/assets/styles/header.css">
+    <link rel="stylesheet" href="src/assets/styles/main.css">
+    <link rel="stylesheet" href="src/assets/styles/media.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -104,7 +104,7 @@
     <main class="main">
         <div class="articles-container">
             <article class="article">
-                <img class="article-photo" src="assets/images/articles/1.jpg">
+                <img class="article-photo" src="src/assets/images/articles/1.jpg">
                 <h2 class="article-title">BASS DROP</h2>
                 <p class="article-content">Now that I’m done thoroughly mangling that vague metaphor, let’s get down to
                     business. You know you need to start blogging to grow your business, but you don’t know how.
@@ -122,7 +122,7 @@
                 </div>
             </article>
             <article class="article">
-                <img class="article-photo" src="assets/images/articles/2.jpg">
+                <img class="article-photo" src="src/assets/images/articles/2.jpg">
                     <h2 class="article-title">French</h2>
                     <p class="article-content">Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur
                         adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -139,7 +139,7 @@
                     </div>
             </article>
             <article class="article">
-                <img class="article-photo" src="assets/images/articles/3.jpg">
+                <img class="article-photo" src="src/assets/images/articles/3.jpg">
                 <h2 class="article-title">Choose a Topic</h2>
                 <p class="article-content">There’s an old maxim that states, “No fun for the writer, no fun for the
                     reader.” No matter what industry you’re working in, as a blogger, you should live and die by this
@@ -157,7 +157,7 @@
                 </div>
             </article>
             <article class="article">
-                <img class="article-photo" src="assets/images/articles/4.jpg">
+                <img class="article-photo" src="src/assets/images/articles/4.jpg">
                 <h2 class="article-title">Monster Cat</h2>
                 <p class="article-content">Before you do any of the following steps, be sure to pick a topic that
                     actually interests you. Nothing – and I mean NOTHING – will kill a blog post more effectively than
@@ -177,7 +177,7 @@
             </article>
 
             <article class="article">
-                <img class="article-photo" src="assets/images/articles/5.jpg">
+                <img class="article-photo" src="src/assets/images/articles/5.jpg">
                 <h2 class="article-title">Marter</h2>
                 <p class="article-content"> can hear your objections already. “But Dan, I have to blog for a cardboard
                     box manufacturing company.” I feel your pain, I really do. During the course of my career, I’ve
@@ -196,7 +196,7 @@
             </article>
 
             <article class="article">
-                <img class="article-photo" src="assets/images/articles/6.jpg">
+                <img class="article-photo" src="src/assets/images/articles/6.jpg">
                 <h2 class="article-title">Berckley</h2>
                 <p class="article-content">ou also need to be able to accept that not every post is going to get your
                     motor running. Some posts will feel like a chore, but if you have editorial control over what you
@@ -216,7 +216,7 @@
             </article>
 
             <article class="article">
-                <img class="article-photo" src="assets/images/articles/7.jpg">
+                <img class="article-photo" src="src/assets/images/articles/7.jpg">
                 <h2 class="article-title">From the flood</h2>
                 <p class="article-content">Great blog posts don’t just happen. Even the best bloggers need a rough idea
                     to keep them on-track. This is where outlines come in. An outline doesn’t need to be lengthy, or
@@ -236,7 +236,7 @@
             </article>
 
             <article class="article">
-                <img class="article-photo" src="assets/images/articles/8.jpg">
+                <img class="article-photo" src="src/assets/images/articles/8.jpg">
                 <h2 class="article-title">Survivor</h2>
                 <p class="article-content">Outlines keep you honest. They stop you from indulging in poorly thought-out
                     metaphors about driving and keep you focused on the overall structure of your post. Sometimes I’ll
@@ -254,7 +254,7 @@
             </article>
 
             <article class="article">
-                <img class="article-photo" src="assets/images/articles/9.jpg">
+                <img class="article-photo" src="src/assets/images/articles/9.jpg">
                 <h2 class="article-title">Zoom</h2>
                 <p class="article-content">Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur
                     adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
@@ -276,7 +276,7 @@
 
     <aside class="aside">
         <div class="block profile">
-            <img src="assets/images/PabloPhoto.jpg" alt="Author Photo">
+            <img src="src/assets/images/PabloPhoto.jpg" alt="Author Photo">
             <h1>Pablo Schklowsky</h1>
             <p class="summary">Dynamic technology leader with over 15 years' experience building and scaling teams of
                 highly motivated software engineers. Able to fluidly interface with a broad set of stakeholders, from
@@ -339,22 +339,22 @@
             <!--<div class="comment-item">-->
 
             <!--</div>-->
-            <img class="avatar" src="assets/images/commentators/trump.jpg">
+            <img class="avatar" src="src/assets/images/commentators/trump.jpg">
             <div class="comment">
                 <h5>Donald Trump</h5>
                 <p>Sometimes by losing a battle you find a new way to win the war</p>
             </div>
-            <img class="avatar" src="assets/images/commentators/alex.jpg">
+            <img class="avatar" src="src/assets/images/commentators/alex.jpg">
             <div class="comment">
                 <h5>Alexandra</h5>
                 <p>Comment tags are used to insert comments in the HTML source code</p>
             </div>
-            <img class="avatar" src="assets/images/commentators/rock.jpg">
+            <img class="avatar" src="src/assets/images/commentators/rock.jpg">
             <div class="comment">
                 <h5>The Rock!</h5>
                 <p>JavaScript comments can be used to explain JavaScript code</p>
             </div>
-            <img class="avatar" src="assets/images/commentators/clinton.jpg">
+            <img class="avatar" src="src/assets/images/commentators/clinton.jpg">
             <div class="comment">
                 <h5>Clinton Bill</h5>
                 <p>You should not pass!</p>
