--- a/index.html
+++ b/index.html
@@ -123,20 +123,20 @@
             </article>
             <article class="article">
                 <img class="article-photo" src="src/assets/images/articles/2.jpg">
-                    <h2 class="article-title">French</h2>
-                    <p class="article-content">Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur
-                        adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                        minim veniam, quis nostrud exercitation ullamco.</p>
-                    <div class="article-bottom">
-                        <div class="article-icons">
-                            <i class="fa fa-comments" aria-hidden="true"></i>
-                            <p>0</p>
-                            <i class="fa fa-star"></i>
-                            <p>1</p>
-                        </div>
-
-                        <div class="article-date">June 3, 2018</div>
+                <h2 class="article-title">French</h2>
+                <p class="article-content">Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur
+                    adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+                    minim veniam, quis nostrud exercitation ullamco.</p>
+                <div class="article-bottom">
+                    <div class="article-icons">
+                        <i class="fa fa-comments" aria-hidden="true"></i>
+                        <p>0</p>
+                        <i class="fa fa-star"></i>
+                        <p>1</p>
                     </div>
+
+                    <div class="article-date">June 3, 2018</div>
+                </div>
             </article>
             <article class="article">
                 <img class="article-photo" src="src/assets/images/articles/3.jpg">
@@ -278,7 +278,7 @@
         <div class="block profile">
             <img src="src/assets/images/PabloPhoto.jpg" alt="Author Photo">
             <h1>Pablo Schklowsky</h1>
-            <p class="summary">Dynamic technology leader with over 15 years' experience building and scaling teams of
+            <p class="content">Dynamic technology leader with over 15 years' experience building and scaling teams of
                 highly motivated software engineers. Able to fluidly interface with a broad set of stakeholders, from
                 external customers to C-level executives to the most technical of engineers. Proven capability to hire
                 effectively, with a keen eye for talent and collaboration.</p>
