Added tags center alignment

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog</title>
 
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="src/assets/styles/blog.css">
     <link rel="stylesheet" href="src/assets/styles/aside.css">
     <link rel="stylesheet" href="src/assets/styles/footer.css">
     <link rel="stylesheet" href="src/assets/styles/header.css">
     <link rel="stylesheet" href="src/assets/styles/main.css">
     <link rel="stylesheet" href="src/assets/styles/media.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 
@@ -66,7 +66,7 @@
 
             <!--Navigation -->
             <nav id="main-menu"
-                 class="menu nav main-menu"
+                 class="menu main-menu"
                  role="navigation"
                  aria-expanded="false"
                  aria-label="Main menu">
