Added picture zooming

--- a/index.html
+++ b/index.html
@@ -104,7 +104,9 @@
     <main class="main">
         <div class="articles-container">
             <article class="article">
-                <img class="article-photo" src="src/assets/images/articles/1.jpg">
+                <div class="article-photo">
+                    <img src="src/assets/images/articles/1.jpg">
+                </div>
                 <h2 class="article-title">BASS DROP</h2>
                 <p class="article-content">Now that I’m done thoroughly mangling that vague metaphor, let’s get down to
                     business. You know you need to start blogging to grow your business, but you don’t know how.
@@ -122,7 +124,9 @@
                 </div>
             </article>
             <article class="article">
-                <img class="article-photo" src="src/assets/images/articles/2.jpg">
+                <div class="article-photo">
+                    <img src="src/assets/images/articles/2.jpg">
+                </div>
                 <h2 class="article-title">French</h2>
                 <p class="article-content">Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur
                     adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -139,7 +143,9 @@
                 </div>
             </article>
             <article class="article">
-                <img class="article-photo" src="src/assets/images/articles/3.jpg">
+                <div class="article-photo">
+                    <img src="src/assets/images/articles/3.jpg">
+                </div>
                 <h2 class="article-title">Choose a Topic</h2>
                 <p class="article-content">There’s an old maxim that states, “No fun for the writer, no fun for the
                     reader.” No matter what industry you’re working in, as a blogger, you should live and die by this
@@ -157,7 +163,9 @@
                 </div>
             </article>
             <article class="article">
-                <img class="article-photo" src="src/assets/images/articles/4.jpg">
+                <div class="article-photo">
+                    <img src="src/assets/images/articles/4.jpg">
+                </div>
                 <h2 class="article-title">Monster Cat</h2>
                 <p class="article-content">Before you do any of the following steps, be sure to pick a topic that
                     actually interests you. Nothing – and I mean NOTHING – will kill a blog post more effectively than
@@ -177,7 +185,9 @@
             </article>
 
             <article class="article">
-                <img class="article-photo" src="src/assets/images/articles/5.jpg">
+                <div class="article-photo">
+                    <img src="src/assets/images/articles/5.jpg">
+                </div>
                 <h2 class="article-title">Marter</h2>
                 <p class="article-content"> can hear your objections already. “But Dan, I have to blog for a cardboard
                     box manufacturing company.” I feel your pain, I really do. During the course of my career, I’ve
@@ -196,7 +206,9 @@
             </article>
 
             <article class="article">
-                <img class="article-photo" src="src/assets/images/articles/6.jpg">
+                <div class="article-photo">
+                    <img src="src/assets/images/articles/6.jpg">
+                </div>
                 <h2 class="article-title">Berckley</h2>
                 <p class="article-content">ou also need to be able to accept that not every post is going to get your
                     motor running. Some posts will feel like a chore, but if you have editorial control over what you
@@ -216,7 +228,9 @@
             </article>
 
             <article class="article">
-                <img class="article-photo" src="src/assets/images/articles/7.jpg">
+                <div class="article-photo">
+                    <img src="src/assets/images/articles/7.jpg">
+                </div>
                 <h2 class="article-title">From the flood</h2>
                 <p class="article-content">Great blog posts don’t just happen. Even the best bloggers need a rough idea
                     to keep them on-track. This is where outlines come in. An outline doesn’t need to be lengthy, or
@@ -236,7 +250,9 @@
             </article>
 
             <article class="article">
-                <img class="article-photo" src="src/assets/images/articles/8.jpg">
+                <div class="article-photo">
+                    <img src="src/assets/images/articles/8.jpg">
+                </div>
                 <h2 class="article-title">Survivor</h2>
                 <p class="article-content">Outlines keep you honest. They stop you from indulging in poorly thought-out
                     metaphors about driving and keep you focused on the overall structure of your post. Sometimes I’ll
@@ -254,7 +270,9 @@
             </article>
 
             <article class="article">
-                <img class="article-photo" src="src/assets/images/articles/9.jpg">
+                <div class="article-photo">
+                    <img src="src/assets/images/articles/9.jpg">
+                </div>
                 <h2 class="article-title">Zoom</h2>
                 <p class="article-content">Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur
                     adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
@@ -336,9 +354,6 @@
 
         <div class="block comments-block">
             <h3 class="comments-header">Recent comments</h3>
-            <!--<div class="comment-item">-->
-
-            <!--</div>-->
             <img class="avatar" src="src/assets/images/commentators/trump.jpg">
             <div class="comment">
                 <h5>Donald Trump</h5>
